test/spec_vectors/memory_fill/fail/module_19.wat
(module (memory 1 1) (func (export "testfn") (memory.fill (i32.const 10) (i64.const 20) (f64.const 30))))